# driftwatch

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: config.json
src/driftwatch/: __init__.py  cli.py  collector.py  config.py  diff.py  models.py  normalize.py  report.py
tests/: test_cli.py  test_collector.py  test_config.py  test_diff.py  test_normalize.py  test_report.py  test_sqlserver_integration.py
