[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driftwatch"
version = "0.1.0"
description = "Schema drift and anomaly detection for SQL Server databases."
requires-python = ">=3.11"
dependencies = ["pyodbc>=5.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
driftwatch = "driftwatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
